<resources>
    <string name="app_name">Студенты</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>

    <string name="title_activity_registration">Registration</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="sing_in">Sing In</string>
    <string name="registration">Create</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="sign_error">Имеются незаполненные поля!!!</string>

    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_lessons">Lessons</string>
    <string name="menu_action_groups">Groups</string>
    <string name="menu_action_students">Students</string>
    <string name="lastname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="edit">Edit</string>
    <string name="delete">Del</string>
    <string name="group">Group</string>
    <string name="journals">Journals</string>
</resources>
