<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.ManagerActivity">
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/search_icon"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_action_settings"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_action_lessons"
        android:orderInCategory="100"
        android:title="@string/menu_action_lessons"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_action_groups"
        android:orderInCategory="100"
        android:title="@string/menu_action_groups"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_action_students"
        android:orderInCategory="100"
        android:title="@string/menu_action_students"
        app:showAsAction="never"/>
</menu>