<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_old"
    android:orientation="vertical"
    tools:context="com.innopolis.android.androidstudents.Activities.RegistrationActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="0.5" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/etBackgroundColor"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@color/etBackgroundColor"
        android:ems="10"
        android:hint="@string/login_text"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/etBackgroundColor"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/etBackgroundColor"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_round_corners"
        android:text="@string/sing_in"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</LinearLayout>
