<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_old"
    android:visibility="visible">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layoutStudentDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.innopolis.android.androidstudents.Activities.StudentDetailsActivity">

            <TextView
                android:id="@+id/tvSurName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/textview_round_corners"
                android:maxLines="1"
                android:text="@string/lastname"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintHorizontal_weight="10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ivStudentPhoto"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/textview_round_corners"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintHorizontal_weight="10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ivStudentPhoto"
                app:layout_constraintTop_toBottomOf="@+id/tvSurName" />

            <TextView
                android:id="@+id/tvMiddleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textview_round_corners"
                android:text="@string/middlename"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ivStudentPhoto"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

            <ImageView
                android:id="@+id/ivStudentPhoto"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintLeft_toRightOf="@+id/tvSurName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/btEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_round_corners"
                android:text="@string/edit"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintLeft_toLeftOf="@+id/ivStudentPhoto"
                app:layout_constraintRight_toLeftOf="@+id/btDelete"
                app:layout_constraintTop_toBottomOf="@+id/ivStudentPhoto" />

            <Button
                android:id="@+id/btDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_round_corners"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintLeft_toRightOf="@+id/btEdit"
                app:layout_constraintRight_toRightOf="@+id/ivStudentPhoto"
                app:layout_constraintTop_toBottomOf="@+id/ivStudentPhoto" />

            <Button
                android:id="@+id/btGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_corners"
                android:text="@string/group"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/btEdit"
                app:layout_constraintRight_toRightOf="@+id/btDelete"
                app:layout_constraintTop_toBottomOf="@+id/btEdit" />

            <TextView
                android:id="@+id/tvContacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Contacts"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvJournal"
                app:layout_constraintTop_toBottomOf="@+id/btGroup" />

            <TextView
                android:id="@+id/tvJournal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/journals"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/tvContacts"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btGroup" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvContacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="Contacts"
                android:background="@drawable/view_round_corners"
                android:maxHeight="300dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="@+id/tvContacts"
                app:layout_constraintRight_toRightOf="@+id/tvContacts"
                app:layout_constraintTop_toBottomOf="@+id/tvContacts" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvJournals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/view_round_corners"
                android:maxHeight="300dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="@+id/tvJournal"
                app:layout_constraintRight_toRightOf="@+id/tvJournal"
                app:layout_constraintTop_toTopOf="@+id/rvContacts" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>